Bug 403941 - No cursor in title clip editor visible
Summary: No cursor in title clip editor visible
Status: RESOLVED FIXED
Alias: None
Product: kdenlive
Classification: Applications
Component: User Interface & Miscellaneous (other bugs)
Version First Reported In: 18.12.1
Platform: Microsoft Windows Microsoft Windows
: NOR normal
Target Milestone: ---
Assignee: Jean-Baptiste Mardelle
URL:
Keywords: junior-jobs
: 420560 (view as bug list)
Depends on:
Blocks:
 
Reported: 2019-02-04 22:53 UTC by CzAndrew
Modified: 2021-02-17 14:04 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:
fritzibaby: low_hanging+


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description CzAndrew 2019-02-04 22:53:08 UTC
SUMMARY
Cursor can't be seen in title clip editor.

STEPS TO REPRODUCE
1. create a new title clip
2. write something, then click on the middle of the text

OBSERVED RESULT
The cursor can't be seen

EXPECTED RESULT
The cursor should be seen like in other text editors.

SOFTWARE/OS VERSIONS
Windows: Win10
MacOS: 
Linux/KDE Plasma: 
(available in About System)
KDE Plasma Version: 
KDE Frameworks Version: 
Qt Version: 

ADDITIONAL INFORMATION
I'm using Kdenlive 18.12.1, but this bug is present in the older versions as well.
Comment 1 emohr 2019-02-14 18:21:06 UTC
Thanks for reporting.
Confirmed. This is the case in Windows and Linux version as well as in the Refactoring version with a transparent background.
Comment 2 Bug Janitor Service 2021-02-16 15:13:15 UTC
A possibly relevant merge request was started @ https://invent.kde.org/multimedia/kdenlive/-/merge_requests/180
Comment 3 Julius Künzel 2021-02-16 19:14:18 UTC
Git commit 0b5046fff025e3c0833d5dc87e68b14cbb544fee by Julius Künzel.
Committed on 16/02/2021 at 15:13.
Pushed by vpinon into branch 'master'.

Fix invisible text cursor in title editor #165 and other minor tweaks
Related: bug 407497

M  +10   -4    src/titler/graphicsscenerectmove.cpp

https://invent.kde.org/multimedia/kdenlive/commit/0b5046fff025e3c0833d5dc87e68b14cbb544fee
Comment 4 Vincent PINON 2021-02-17 07:02:49 UTC
Git commit 1e02108e265207ff9faf432c1bdc4938796a05a9 by Vincent Pinon, on behalf of Julius Künzel.
Committed on 17/02/2021 at 07:00.
Pushed by vpinon into branch 'release/20.12'.

Fix invisible text cursor in title editor #165 and other minor tweaks
Related: bug 407497

M  +10   -4    src/titler/graphicsscenerectmove.cpp

https://invent.kde.org/multimedia/kdenlive/commit/1e02108e265207ff9faf432c1bdc4938796a05a9
Comment 5 Julius Künzel 2021-02-17 14:04:12 UTC
*** Bug 420560 has been marked as a duplicate of this bug. ***