Fix invisible text cursor in title editor #165 and other minor tweaks

BUG: 403941
BUG: 407497